--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -143,4 +143,4 @@ Rattlesnake (Crotalus oreganus). Northwestern Naturalist (90) 55-57.<a href="htt
 ### Publications and Highlights 
 {: .t60 }
 
-{% include list-posts.html tag='Pubs' %}
+{% include list-posts tag='Pubs' %}
