--- a/pages/404.md
+++ b/pages/404.md
@@ -7,7 +7,7 @@ header:
     image_fullwidth: "404.jpg"
     title: ""
     caption: Connecticut
-permalink: "/404.html"
+permalink: "/404"
 ---
 ## No problem!
 
