--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,9 +1,12 @@
 ---
 layout: page
 title: "Oops! Nothing here..."
-subheadline: "HTTP 404"
-teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
-sitemap: false
+subheadline: "404"
+teaser: "Maybe the webpage moved or we deleted it. Or did you maybe mistype the URL?"
+header:
+    image_fullwidth: "404.jpg"
+    title: ""
+    caption: Connecticut
 permalink: "/404.html"
 ---
 ## No problem!
