--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -14,6 +14,7 @@ header:
     title: ""
     caption: Curacao
     caption_url: https://carolinafishes.github.io/fieldwork/diving
+permalink: "/Pubs/reprints"
 ---
 
 <h3>2016</h3>
