--- a/_posts/MiscR/2016-09-06-Diet_data.md
+++ b/_posts/MiscR/2016-09-06-Diet_data.md
@@ -16,6 +16,7 @@ header:
     image_fullwidth: "Curacao_banner.jpg"
     title: ""
     caption: Shete Boka, Curaçao
+comments: true    
 ---
 <h3>Visualizing Gut Content</h3>
 
