get rid of meta data

--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -15,6 +15,7 @@ header:
     caption: Curacao
     caption_url: https://carolinafishes.github.io/fieldwork/diving
 permalink: "/Pubs/reprints/"
+show_meta: false
 ---
 
 <h3>2016</h3>
