--- a/_posts/software/2015-01-07-PhyR.md
+++ b/_posts/software/2015-01-07-PhyR.md
@@ -13,7 +13,8 @@ image:
 header:
     image_fullwidth: "informRpage.jpg"
     title: ""
-    caption: Seattle, Wa
+    caption: Seattle, 
+show_meta: false    
 ---
 <img class="b30" src="http://carolinafishes.github.io/images/PhyRlogo.jpg" alt="">
 <br>
