--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -70,6 +70,8 @@ bones by gravid gopher tortoises (Gopherus polyphemus) in South Florida. Peabody
 
 <h3>2013</h3>
 
+<br>2013. Near, T.J., Dornburg, A., Tokita, M., Suzuki, D., Brandley, M.C., Friedman, M. Boom and bust: ancient and recent diversification in bichirs and ropefish (Polypteridae: Actinopterygii), a relictual lineage of ray-finned fishes. Evolution 68: 1014–1026 <a href='https://www.researchgate.net/publication/259528342_Boom_and_bust_ancient_and_recent_diversification_in_bichirs_Polypteridae_Actinopterygii_a_relictual_lineage_of_ray-finned_fishes?ev=prf_pub'><en>pdf</en></a>
+
 <br>2013. Near, T.J., Dornburg, A., Eytan, R.I., Keck, B.P., Smith, W.L., Kuhn, K.L., Moore, J.A., 
 Price, S.A., Burbrink, F.T., Friedman, M., Wainwright, P.M. Phylogeny and tempo of diversification in the superradiation of spiny-rayed fishes. Proceedings of the National Academy Sciences 110: 12738–12743.<a href="https://www.researchgate.net/publication/259528342_Boom_and_bust_ancient_and_recent_diversification_in_bichirs_%28Polypteridae_Actinopterygii%29_a_relictual_lineage_of_ray-finned_fishes"> <en>pdf</en></a>
 
