added BMS paper

--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -20,6 +20,10 @@ show_meta: false
 
 <h3>2016</h3>
 
+<br>2016.  Dornburg, A., Forrestel, E., Moore, J.A., Iglesias, T.L., Jones, A., Rao,
+L., Warren, D.L. An assessment of sampling biases across studies of diel activity patterns in marine ray-finned fishes (Actinopterygii). Online early. Bulletin of Marine Science.
+<a href="https://www.researchgate.net/publication/311066164_An_assessment_of_sampling_biases_across_studies_of_diel_activity_patterns_in_marine_ray-finned_fishes_Actinopterygii"> <en>pdf</en></a>
+
 <br>2016. Dornburg, A., Lippi, C., Federman, S., Moore, J.A., Warren, D.L., Iglesias, T.L., Brandley, M.C., Watkins-Colwell, G.J., Lamb, A.D.  Jones, A. Disentangling the Influence of Urbanization and Invasion on Endemic Geckos in Tropical Biodiversity Hot Spots: A Case Study of Phyllodactylus martini (Squamata: Phyllodactylidae) along an Urban Gradient in Curaçao. Bulletin of the Peabody Museum of Natural History, 57: pp.147-164.<a href="https://www.researchgate.net/publication/308891841_Disentangling_the_Influence_of_Urbanization_and_Invasion_on_Endemic_Geckos_in_Tropical_Biodiversity_Hot_Spots_A_Case_Study_of_Phyllodactylus_martini_Squamata_Phyllodactylidae_along_an_Urban_Gradient_i"> <en>pdf</en></a>
 
 <br>2016. Dornburg, A., Federman, S., Eytan, R.I., Near, T.J. Cryptic species diversity in Sub-
