--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -18,7 +18,21 @@ permalink: "/Pubs/reprints/"
 show_meta: false
 ---
 
+<h3>2017</h3>
+
+<br> Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity.  Nature Ecology and Evolution. DOI: 10.1038/s41559-017-0239-y
+<a href="https://www.researchgate.net/publication/318660129_Cradles_and_museums_of_Antarctic_teleost_biodiversity?_iepl%5BviewId%5D=7VrdiZEkOGNKwKZwBr2HhzOe&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A318660129&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
+<br> Lamb, A.J., Watkins-Colwell, G.C., Moore, J.A., Iglesias, T., Warren, D.L., Brandley, M.C., Dornburg, A. Endolymphatic sac use and reproductive activity in the Lesser Antilles endemic gecko Gonatodes antillensis (Gekkota: Spaerodactylidae). Bulletin of the Peabody Museum of Natural History 58(1):17–29 
+<a href="https://www.researchgate.net/publication/316107244_Endolymphatic_Sac_Use_and_Reproductive_Activity_in_the_Lesser_Antilles_Endemic_Gecko_Gonatodes_antillensis_Gekkota_Sphaerodactylidae"> <en>pdf</en></a>
+<br>Chakrabarty, P, Faircloth, B.C., Ludt, W.B, McMahan, C.D., Near, T.J, Dornburg, A., Albert, J.S., Arroyave, J., Stiassny, M.J., Sorenson, L., Alfaro, M.E. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. Systematic Biology DOI:10.1093/sysbio/syx038
+<a href="https://www.researchgate.net/publication/316442217_Phylogenomic_Systematics_of_Ostariophysan_Fishes_Ultraconserved_Elements_Support_the_Surprising_Non-Monophyly_of_Characiformes"> <en>pdf</en></a>
+<br>Dornburg, A., Townsend, J.P., Spriggs, E., Eytan, R.I., Moore, J.A., Wainwright, P.C.,Lemmon, A.R., Moriarty Lemmon, E., Near, T.J. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. Molecular Phylogenetics and Evolution 110: 27-38
+<a href="https://www.researchgate.net/publication/314104725_New_Insights_on_the_Sister_Lineage_of_Percomorph_Fishes_with_an_Anchored_Hybrid_Enrichment_Dataset"> <en>pdf</en></a>
+
 <h3>2016</h3>
+
+<br>Dornburg, A., Tamagnon, J., Townsend, J.P. PhyInformR: Phylogenetic experimental design and phylogenomic data exploration. BMC Evolutionary Biology 16 (1): 262
+<a href="https://www.researchgate.net/publication/311339907_PhyInformR_phylogenetic_experimental_design_and_phylogenomic_data_exploration_in_R?_iepl%5BviewId%5D=QY11lOKtnAo1velxe774CFf9&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A311339907&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
 
 <br>2016.  Dornburg, A., Forrestel, E., Moore, J.A., Iglesias, T.L., Jones, A., Rao,
 L., Warren, D.L. An assessment of sampling biases across studies of diel activity patterns in marine ray-finned fishes (Actinopterygii). Online early. Bulletin of Marine Science.
