Adding media a coverage

--- a/_posts/Highlights/2015-10-18-Media.md
+++ b/_posts/Highlights/2015-10-18-Media.md
@@ -25,6 +25,7 @@ show_meta: false
 <br><i> Islands are Cradles for Antarctic Marine Life</i>
 <br><a href="https://news.yale.edu/2017/07/24/islands-are-evolutionary-cradle-antarctica-marine-life"> <en>Yale Daily News</en></a>
 <br><a href="http://www.the-scientist.com/?articles.view/articleNo/49953/title/Islands-North-of-Antarctica-Key-to-Fish-Species-Diversity/"> <en>The-Scientist</en></a>
+<br><a href="http://wshu.org/post/warming-seas-endanger-antarctic-ecosystem-and-billion-dollar-fishing-industry#stream/0"> <en>NPR</en></a>
 
 <br> Television 
 <br><a href="http://www.wral.com/weather/video/16776420/"> <en>WRAL</en></a>
@@ -46,5 +47,7 @@ show_meta: false
 <br><a href="http://www.iflscience.com/plants-and-animals/if-lemurs-go-extinct-madagascars-large-seeded-plants-may-too/"> <en>iflscience.com</en></a> 
 <br><a href="https://phys.org/news/2016-04-lemur-extinctions-orphaned-madagascar-species.html"> <en>phys.org</en></a> 
 <br><a href="http://theconversation.com/how-lessons-from-past-extinctions-can-help-save-madagascars-lemurs-59758"> <en>theconversation.com</en></a> 
+<br><a href="http://www.futurity.org/lemurs-canarium-plants-extinction-1136932-2/"> <en>futurity.org</en></a> 
+
 
 
