more media links

--- a/_posts/Highlights/2015-10-18-Media.md
+++ b/_posts/Highlights/2015-10-18-Media.md
@@ -49,6 +49,8 @@ show_meta: false
 <br><a href="https://phys.org/news/2016-04-lemur-extinctions-orphaned-madagascar-species.html"> <en>phys.org</en></a> 
 <br><a href="http://theconversation.com/how-lessons-from-past-extinctions-can-help-save-madagascars-lemurs-59758"> <en>theconversation.com</en></a> 
 <br><a href="http://www.futurity.org/lemurs-canarium-plants-extinction-1136932-2/"> <en>futurity.org</en></a> 
-
+<br>
+<br> <i>Defining species has a big impact on research</i>
+<br><a href="http://www.newsobserver.com/news/technology/article56659913.html"> <en>Charlotte News and Observer</en></a>
 
 
