--- a/_posts/Highlights/2015-10-18-Media.md
+++ b/_posts/Highlights/2015-10-18-Media.md
@@ -1,23 +1,19 @@
 ---
 layout: page
 title: "Media Coverage"
-meta_teaser: "Keep up with our highlights in the media!"
 header:
-    image_fullwidth: "madagascar.jpg"
-    caption: madagascar
+    image_fullwidth: "Lumber_river.jpg"
+    caption: Lumber River, NC
     title: ""
 image:
-    thumb:  mada_thumb.jpg
-    homepage: madagascar.jpg
+    thumb:  Lumber_river.jpg
+    homepage: Lumber_river.jpg
 categories:
     - highlights
 comments: true
 show_meta: false
 ---
  
-
-
-
 <h3>2017</h3>
 
 <br> Online Press
