--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -1,42 +1,41 @@
 ---
 layout: page
-title: "In the News!"
-meta_teaser: "Keep up with our highlights in the media!"
+title: "Media Coverage"
 header:
-    image_fullwidth: "madagascar.jpg"
-    caption: madagascar
+    image_fullwidth: "Lumber_river.jpg"
+    caption: Lumber River, NC
     title: ""
 image:
-    thumb:  mada_thumb.jpg
-    homepage: madagascar.jpg
+    thumb:  Lumber_river.jpg
+    homepage: Lumber_river.jpg
 categories:
     - highlights
 comments: true
 show_meta: false
 ---
  
- <br> Keep up with our appearances and discoveries in the news!
-
-
-<h3>Media Coverage</h3>
-
 <h3>2017</h3>
 
 <br> Online Press
+<br>
 <br><i> Islands are Cradles for Antarctic Marine Life</i>
-<a href="https://news.yale.edu/2017/07/24/islands-are-evolutionary-cradle-antarctica-marine-life"> <en>Yale Daily News</en></a>
+<br><a href="https://news.yale.edu/2017/07/24/islands-are-evolutionary-cradle-antarctica-marine-life"> <en>Yale Daily News</en></a>
 <br><a href="http://www.the-scientist.com/?articles.view/articleNo/49953/title/Islands-North-of-Antarctica-Key-to-Fish-Species-Diversity/"> <en>The-Scientist</en></a>
+<br><a href="http://wshu.org/post/warming-seas-endanger-antarctic-ecosystem-and-billion-dollar-fishing-industry#stream/0"> <en>NPR</en></a>
+<br><a href="https://natureecoevocommunity.nature.com/channels/521-behind-the-paper/posts/18801-for-fish-only-one-road-leads-to-antarctica"> <en>Nature Ecology and Evolution Behind the Paper </en></a>
 
 <br> Television 
 <br><a href="http://www.wral.com/weather/video/16776420/"> <en>WRAL</en></a>
 
 <br> Popular Press
+<br>
 <br><i> New initiative to help fight ebola outbreaks with Dr. Jeff Townsend</i>
-<br><a href="http://www.wral.com/weather/video/16776420/"> <en>North Carolina Naturist</en></a>
+<br><a href=""> <en>North Carolina Naturist</en></a>
 
 <h3>2016</h3>
 
 <br> Online Press
+<br>
 <br> <i>The importance of lemurs for Madagascar's trees</i>
 <br><a href="https://www.newscientist.com/article/2083800-lemur-extinctions-in-madagascar-leave-behind-doomed-orphan-trees/"> <en>newscientist.com</en></a>
 <br><a href="http://www.smithsonianmag.com/science-nature/lemur-extinctions-are-harmful-madagascars-plant-life-too-180958717/"> <en>smithsonianmag.com</en></a>
@@ -45,5 +44,9 @@ show_meta: false
 <br><a href="http://www.iflscience.com/plants-and-animals/if-lemurs-go-extinct-madagascars-large-seeded-plants-may-too/"> <en>iflscience.com</en></a> 
 <br><a href="https://phys.org/news/2016-04-lemur-extinctions-orphaned-madagascar-species.html"> <en>phys.org</en></a> 
 <br><a href="http://theconversation.com/how-lessons-from-past-extinctions-can-help-save-madagascars-lemurs-59758"> <en>theconversation.com</en></a> 
+<br><a href="http://www.futurity.org/lemurs-canarium-plants-extinction-1136932-2/"> <en>futurity.org</en></a> 
+<br>
+<br> <i>Defining species has a big impact on research</i>
+<br><a href="http://www.newsobserver.com/news/technology/article56659913.html"> <en>Charlotte News and Observer</en></a>
 
 
