--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -30,7 +30,7 @@ show_meta: false
 <br> Popular Press
 <br>
 <br><i> New initiative to help fight ebola outbreaks with Dr. Jeff Townsend</i>
-<br><a href=""> <en>North Carolina Naturist</en></a>
+<br><a href="http://carolinafishes.github.io/images/2017.ebola.pdf"> <en>North Carolina Naturalist</en></a>
 
 <h3>2016</h3>
 
