--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -69,3 +69,7 @@ show_meta: false
 <i> On the origins of Madagascar's rainforests </i>
 <br><a href="http://www.charlotteobserver.com/news/science-technology/article39134088.html"> <en>Charlotte News and Observer</en></a> 
 
+<i> Oddities of our collections</i>
+<br><a href="https://www.buzzfeed.com/alexkasprak/things-in-jars?utm_term=.puea11QGyd#.bh1ybbYQeE"> <en>Buzzfeed</en></a> 
+
+
