--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -22,6 +22,7 @@ show_meta: false
 <br><a href="https://news.yale.edu/2017/07/24/islands-are-evolutionary-cradle-antarctica-marine-life"> <en>Yale Daily News</en></a>
 <br><a href="http://www.the-scientist.com/?articles.view/articleNo/49953/title/Islands-North-of-Antarctica-Key-to-Fish-Species-Diversity/"> <en>The-Scientist</en></a>
 <br><a href="http://wshu.org/post/warming-seas-endanger-antarctic-ecosystem-and-billion-dollar-fishing-industry#stream/0"> <en>NPR</en></a>
+<br><a href="https://scitechdaily.com/yale-study-examines-evolutionary-cradle-for-antarctica-marine-life/"><en>SciTechDaily</en></a>
 <br><a href="https://natureecoevocommunity.nature.com/channels/521-behind-the-paper/posts/18801-for-fish-only-one-road-leads-to-antarctica"> <en>Nature Ecology and Evolution Behind the Paper </en></a>
 
 <br> Television 
