new links and updates

--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -16,6 +16,12 @@ show_meta: false
  
 <h3>2017</h3>
 
+<br> Television 
+<br><a href="http://www.wral.com/weather/video/16776420/"> <en>WRAL</en></a>
+
+<br> Radio 
+<br><a href="http://wunc.org/post/scientist-uses-fish-unlock-ecological-secrets#stream/0"> <en>North Carolina Public Radio</en></a>
+
 <br> Online Press
 <br>
 <br><i> Islands are Cradles for Antarctic Marine Life</i>
@@ -24,9 +30,6 @@ show_meta: false
 <br><a href="http://wshu.org/post/warming-seas-endanger-antarctic-ecosystem-and-billion-dollar-fishing-industry#stream/0"> <en>NPR</en></a>
 <br><a href="https://scitechdaily.com/yale-study-examines-evolutionary-cradle-for-antarctica-marine-life/"><en>SciTechDaily</en></a>
 <br><a href="https://natureecoevocommunity.nature.com/channels/521-behind-the-paper/posts/18801-for-fish-only-one-road-leads-to-antarctica"> <en>Nature Ecology and Evolution Behind the Paper </en></a>
-
-<br> Television 
-<br><a href="http://www.wral.com/weather/video/16776420/"> <en>WRAL</en></a>
 
 <br> Popular Press
 <br>
