long overdue updates
part 1 of many updates

--- a/_posts/Team/2015-01-01-Staff.md
+++ b/_posts/Team/2015-01-01-Staff.md
@@ -20,7 +20,8 @@ permalink: "/Team/Staff/"
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/Alex_guam_diving.jpg" alt="">
 <br>
-My research takes an integrative approach to explore the factors that underlie the origin and maintenance of biodiversity in ray-finned fishes (Actinopterygii). Actinopterygiians comprise over half of all living vertebrate species and a better understanding of their history will shed light onto some long standing questions in evolutionary biology. Why are some clades more diverse than others? Are there general trends that govern the diversification dynamics of lineages in different communities? To answer these questions, my work crosses traditional boundaries between molecular phylogenetics, morphology, paleontology, and ecology. This integrative approach to research facilitates a broader understanding of not only how ecomorphological diversity has accumulated in ecosystems ranging from coral reefs to the Southern Ocean of Antarctica, but also illuminates the factors that influence patterns of vertebrate diversification.
+My research program takes an integrative approach to explore the factors that underlie the origin and maintenance of vertebrate biodiversity, with an emphasis on the study of ray-finned fishes (Actinopterygiians). Actinopterygiians comprise over half of all living vertebrate species—a better understanding of their history will shed light onto long standing questions in evolutionary biology that have relevance to both conservation and human health such as: how do lineages persist and recover from rapid environmental change? How do we extract relevant information from genome-scale datasets to efficiently link genotypes to phenotypes? What are the mechanisms and functional consequences of vertebrate immune gene evolution?  To address these types of questions, I often cross traditional research boundaries, enabling the integration of perspectives from the fields of biodiversity science,  molecular phylogenomics, functional and computational genomics, and human health. This integrative approach to research not provides a historical foundation for forecasting the response of species facing global changes while illuminating general features of vertebrate evolution, but also is critical for developing a comparative perspective of the molecular pathways vertebrates have taken to distinguish normal cells from pathogens. 
+
 <br> 
 <br><a href='https://www.researchgate.net/profile/Alex_Dornburg'>Research Gate</a>
 <br><a href='https://scholar.google.com/citations?user=VgPd6sMAAAAJ&hl=en'>Google Scholar</a>
