--- a/_posts/Highlights/2015-10-20-Media.md
+++ b/_posts/Highlights/2015-10-20-Media.md
@@ -14,6 +14,17 @@ comments: true
 show_meta: false
 ---
  
+<h3>2018</h3>
+<br> Online Press
+<br>
+<br><i> Brain evolution in fishes</i>
+<br><a href="https://www.sciencedaily.com/releases/2018/07/180724110244.htm"> <en>Science Daily</en></a>
+<br><a href="https://www.innovations-report.de/html/berichte/biowissenschaften-chemie/nachtaktive-fische-haben-kleinere-gehirne.html"> <en>Innovations-report (Germany)</en></a>
+<br><a href="https://www.techexplorist.com/bigger-eyes-reduced-brain-power-nocturnal-fishes/15627/"> <en>Tech Explorist</en></a>
+<br><a href="https://www.asianscientist.com/2018/08/in-the-lab/nocturnal-fish-eyes-brain/"> <en>Asian Scientist Magazine</en></a>
+<br><a href="https://idw-online.de/de/news699014"> <en>IDW-Online (Germany)</en></a>
+<br><a href="https://www.vbio.de/aktuelles/wissenschaft/nachtaktive-fische-haben-kleinere-gehirne/"> <en>vbio (Germany)</en></a>
+
 <h3>2017</h3>
 
 <br> Television 
