--- a/_posts/Highlights/2017-04-15-brains.md
+++ b/_posts/Highlights/2017-04-15-brains.md
@@ -4,7 +4,7 @@ title: "Circadian Rhythms Shape The Vertebrate Brain"
 teaser: "Changes in light shape fish brain evolution"
 header:
     image_fullwidth: "Okinawa_banner.jpg"
-    caption: Maeta Flats, Okinawa Japan
+    caption: Maeda Flats, Okinawa Japan
     title: ""
 image:
     thumb:  Okinawa_banner.jpg
