--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -17,8 +17,23 @@ header:
 permalink: "/Pubs/reprints/"
 show_meta: false
 ---
+<h3>2018</h3>
+
+<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Submitted to Science. Bioarchive: http://biorxiv.org/cgi/ content/short/478842v1
+
+<br>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dornburg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations. Molecular Phylogenetics and Evolution 129: 268—279
+
+<br>Dornburg,A. Lamb, A.D., Warren, D. Watkins-Colwell, G., Lewbart, G.,Flowers, J. Are geckos paratenic hosts for Caribbean Island Acanthocephalans? Evidence from <i>Gonatodes antillensis</i> and a review of squamate reptiles acting as transport hosts. Peabody Bulletin of Natural History (accepted)
+
+<br>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. Systematic Biology. 
+
+<br>Iglesias, T.L.*, Dornburg, A.*, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(*co-first authors)
+
+<br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616
 
 <h3>2017</h3>
+
+<br>Dornburg, A., Townsend, J.P., Wang, Z. Maximizing power in phylogenetics and phylogenomics: a perspective illuminated by fungal big data. In J.P Townsend & Z. Wang (Eds.). Fungal phyologenetics and phylogenomics (pp. 1—47). Advances in Genetics volume 100. Cambridge, MA: Academic Press
 
 <br> Dornburg, A., Lamb, A., Federman, S., Jones, C. Near, T.J. Cradles and Museums of Antarctic Biodiversity.  Nature Ecology and Evolution. DOI: 10.1038/s41559-017-0239-y
 <a href="https://www.researchgate.net/publication/318660129_Cradles_and_museums_of_Antarctic_teleost_biodiversity?_iepl%5BviewId%5D=7VrdiZEkOGNKwKZwBr2HhzOe&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A318660129&_iepl%5BinteractionType%5D=publicationTitle"> <en>pdf</en></a>
