--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -19,7 +19,7 @@ show_meta: false
 ---
 <h3>2018</h3>
 
-<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Submitted to Science. Bioarchive: http://biorxiv.org/cgi/ content/short/478842v1
+<br>Daane, J.M., Dornburg, A., Smits, P., MacGuigan, D.J., Hawkins, M.B., Near, T.J., Detrich, H.W., Harris, M.P. Historical contingency shapes adaptive radiation in Antarctic fishes. Submitted to Science. <a href="http://biorxiv.org/cgi/ content/short/478842v1"> <en>BioRxiv</en></a>
 
 <br>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dornburg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations. Molecular Phylogenetics and Evolution 129: 268—279
 
@@ -27,7 +27,7 @@ show_meta: false
 
 <br>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. Systematic Biology. 
 
-<br>Iglesias, T.L.*, Dornburg, A.*, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(*co-first authors)
+<br>Iglesias, T.L.†, Dornburg, A.†, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(†co-first authors)
 
 <br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616
 
