--- a/_posts/collection/2016-08-26-IMLS.md
+++ b/_posts/collection/2016-08-26-IMLS.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "New Grant to conserve important specimens and records"
+title: "New grant to conserve important specimens and records"
 teaser: "Casting a wider net to harness the power of collections"
 header:
     image_fullwidth: "chile1banner.jpg"
