error on terminating string
fixed missed </a> and a link issue

--- a/_posts/fieldwork/2018-10-08-Okinawa.md
+++ b/_posts/fieldwork/2018-10-08-Okinawa.md
@@ -25,13 +25,13 @@ show_meta: false
 ---
 
 <h3>Ryukyu Fieldwork 2018</h3>
-Just a quick note here. I recently got back from several weeks of fieldwork in Okinawa. This was a fantastic trip. Working with <a href='http://arilab.unit.oist.jp/'>Evan Economo</a>, we assembled a great team of investigators to maximize our sampling efforts and obtain a more comprehensive evolutionary understanding of the fishes that make these waters their home. I was interested in sampling tissues to gain more comparative material for immunogenetic work, <a href='https://www.researchgate.net/profile/Teresa_Iglesias'>Teresa Iglesias</a> was sampling brains for our <a href='https://carolinafishes.github.io/highlights/brains/'>ongoing teleost neuro-biology</a> projects, <a href='http://schmitzlab.info/'>Lars Schmitz</a> was sampling eyes for retinal mapping,<a href='https://fishlab.ucdavis.edu/'>Peter Wainwright</a> was investigating gut morphology, and <a href='https://danlwarren.wordpress.com/'>Dan Warren</a> + <a href='https://scholar.google.com/citations?user=Nr0C3gMAAAAJ&hl=en'>Matt Brandley<a> were a powerhouse of sampling and ideas for future projects.
+Just a quick note here. I recently got back from several weeks of fieldwork in Okinawa. This was a fantastic trip. Working with <a href='http://arilab.unit.oist.jp/'>Evan Economo</a>, we assembled a great team of investigators to maximize our sampling efforts and obtain a more comprehensive evolutionary understanding of the fishes that make these waters their home. I was interested in sampling tissues to gain more comparative material for immunogenetic work, <a href='https://www.researchgate.net/profile/Teresa_Iglesias'>Teresa Iglesias</a> was sampling brains for our <a href='https://carolinafishes.github.io/highlights/brains/'>ongoing teleost neuro-biology</a> projects, <a href='http://schmitzlab.info/'>Lars Schmitz</a> was sampling eyes for retinal mapping,<a href='https://fishlab.ucdavis.edu/'>Peter Wainwright</a> was investigating gut morphology, and <a href='https://danlwarren.wordpress.com/'>Dan Warren</a> + <a href='https://scholar.google.com/citations?user=Nr0C3gMAAAAJ&hl=en'>Matt Brandley</a> were a powerhouse of sampling and ideas for future projects.
 <br>
 <br>
 We were working out of the marine lab at OIST, and it's worth a quick mention just to point out how cool this place is! With a flow through saltwater set up, there are lots of tanks with cephalapods to look at (octopus, cuddlefish, and squid) that are being used for behavious experiments including the study of sleep in cephalopods. 
 <br>
 <br>
-<img class="b30" src="http://carolinafishes.github.io/images/Jfield4.jpg" alt=""><em>One of the squids at the marine lab. Teresia Iglesias is currenty conducting pioneering behavioural work on sleep in cephalopods using these animals as a model.</em>
+<img class="b30" src="http://carolinafishes.github.io/images/squid.jpg" alt=""><em>One of the squids at the marine lab. Teresia Iglesias is currenty conducting pioneering behavioural work on sleep in cephalopods using these animals as a model.</em>
 <br>
 <br>
 Sampling this time involved a combination of SCUBA, rod and reel fishing, fish market visits, tidepooling, and walking up tidal creeks. Weather conditions were pretty variable with sea conditions going from glass calm to treacherous between days. Likewise visibility underwater fluctuated between dozens of meters to just a few feet. When conditions were bad we were restricted to sampling within the sheltered reef flats, but still found a spectacular diversity of wildlife. 
