--- a/_posts/fieldwork/2018-10-08-Okinawa.md
+++ b/_posts/fieldwork/2018-10-08-Okinawa.md
@@ -48,7 +48,7 @@ We are currently extracting RNA from samples we collected  to add to our sample 
   <li><a href="{{ site.url }}/images/2018_oist5.jpg"><img  data-caption="Newt crossing the road during a rain event" class="th" src="{{ site.url }}/images/2018_oist5_thumb.jpg"></a></li>
   <li><a href="{{ site.url }}/images/2018_oist6.jpg"><img  data-caption="Walking back with the catch of the (very rainy) day" class="th" src="{{ site.url }}/images/2018_oist6_thumb.jpg"></a></li>
   <li><a href="{{ site.url }}/images/2018_oist7.jpg"><img  data-caption="Lars Schmitz catching his first fish in the field!" class="th" src="{{ site.url }}/images/2018_oist7_thumb.jpg"></a></li>
-  <li><a href="{{ site.url }}/images/2018_oist8.jpg"><img  data-caption="Lars Schmitz catching his first fish in the field!" class="th" src="{{ site.url }}/images/2018_oist8_thumb.jpg"></a></li>
+  <li><a href="{{ site.url }}/images/2018_oist8.jpg"><img  data-caption="Holding tanks at the marine lab" class="th" src="{{ site.url }}/images/2018_oist8_thumb.jpg"></a></li>
 </ul>
 
 
