--- a/_posts/fieldwork/2018-10-08-Okinawa.md
+++ b/_posts/fieldwork/2018-10-08-Okinawa.md
@@ -14,7 +14,7 @@ tags:
     - evolutionary medicine
     - mudskipper
 image:
-   thumb: ""
+   thumb: 2018_oist_banner.jpg
    homepage: 2018_oist_banner.jpg
 header: 
     image_fullwidth: "2018_oist_banner.jpg"
