--- a/_posts/Highlights/2017-04-24-parasite.md
+++ b/_posts/Highlights/2017-04-24-parasite.md
@@ -25,10 +25,12 @@ She emailed me some photos asking what these were. I had never seen anything lik
 <br>
 April brought back some of the infected geckos from the field and we brought them to the lab of parasitologist <a href='https://cvm.ncsu.edu/directory/flowers-james/'>Dr. James Flowers</a>. He quickly identified the subcutaneous cysts as cystacanths of <i>Oncicola</i> likely <i>Oncicola venezuelensis</i>. Here is what is odd. <i>Oncicola</i> starts its life in termites and finishes its life in mammals such as cats. What was it doing in small ground dwelling gecko? 
 <br>
+<br>
 <img class="b30" src="http://carolinafishes.github.io/images/gecko_parasite1.png" alt=""><em> A. Image of individual <i>G. antillensis</i> with visible subcutaneous cystacnaths highlighted. Taken from our upcoming paper (link coming soon!)</em>
 <br>
 <br>
-What April had stumbled upon turned out to be the first observation of <i>Gonatodes antillensis</i> acting as a transport host for a species of <i>Oncicola</i>, a type of spiny-head worm (Acanthocephala) Although numerous parasites start their lives in invertebrates and must somehow get to various birds or mammals, transport hosts are woefully understudied. This is particularly true for squamate reptiles. James and I scoured the literature and found that for the Carribean, almost all records of lizards or snakes acting as hosts came from the well studied lizard <i>Anolis</i>. 
+What April had stumbled upon turned out to be the first observation of <i>Gonatodes antillensis</i> acting as a transport host for a species of <i>Oncicola</i>, a type of spiny-head worm (Acanthocephala) Although numerous parasites start their lives in invertebrates and must somehow get to various birds or mammals, transport hosts are woefully understudied. This is particularly true for squamate reptiles. James and I scoured the literature and found that for the Carribean, almost all records of squamates acting as hosts came from the observations in <i>Anolis </i>lizards. 
+<br>
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/gecko_parasite2.png" alt=""><em> B. Dorsal view of <i>G. antillensis</i> with C. slide of <i>Oncicola</i> cystacanth extracted from a cyst. Taken from our upcoming paper (link coming soon!)</em>
 <br>
@@ -42,7 +44,7 @@ We found over 200 records from 35 countries spanning 184 species. Over half were
 The results of our literature and specimen survey suggest squamates to represent an under-appreciated component of the ecology and life-cycle of spiny-head worms. These species span the squamate Tree of Life, so it is very likely that this mode of transmission may be a pervasive squamate-wide phenomenon. 
 <br>
 <br>
-In the case of <i>Gonatodes antillensis</i>, lets consider the life cycle of <i>Oncicola venezuelensis</i>.This parasite utilizes  <i>Nasutitermes</i> termites as intermediate hosts. Parasitized termites have been found to be more vulnerable to lizard predation, and laboratory studies have demonstrated that ingestion of infected termites by lizards will result in transmission. Termites of the genus Nasutitermes are considered native to Curaçao and species of <i>Gonatodes</i> for which diets are known have all been documented to eat termites. This suggests that the feeding ecology of <i>G. antillensis</i> may predispose this species as a transmission vector for <i>Oncicola</i>. 
+In the case of <i>Gonatodes antillensis</i>, lets consider the life cycle of <i>Oncicola venezuelensis</i>. This parasite utilizes  <i>Nasutitermes</i> termites as intermediate hosts. Parasitized termites have been found to be more vulnerable to lizard predation, and laboratory studies have demonstrated that ingestion of infected termites by lizards will result in transmission. <i>Nasutitermes</i> are considered native to Curaçao and species of <i>Gonatodes</i> for which diets are known have all been documented to eat termites. This suggests that the feeding ecology of <i>G. antillensis</i> may predispose this species as a transmission vector for <i>Oncicola</i>. 
 <br>
 <br>
 It gets worse here. <i>Nasutitermes</i> do very well in disturbed habitats. So do cats. The site April found these infested geckos was highly degraded to say the least and also full of cats. In other words, a perfect storm for parasite transmission. 
