--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -30,7 +30,7 @@ show_meta: false
 <br>Iglesias, T.L.†, Dornburg, A.†, Warren, D.L., Wainwright, P.C., Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. Journal of Evolutionary Biology 31: 1082—1092(†co-first authors)
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/JEBcover.jpg" alt="">
-<em>A photo I took of a <i>Sparisoma aurofrenatum </i>(redband parrotfish) settling in for the night made the cover of JEB!</em>
+<br><em>A photo I took of a <i>Sparisoma aurofrenatum </i>(redband parrotfish) settling in for the night made the cover of JEB!</em>
 <br>
 <br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616
 <br>
