--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -35,7 +35,7 @@ show_meta: false
 <br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/EEcover.jpg" alt="">
-<em>Katerina Zapfe's drawing of an <i>Opsanus Tau </i>(Oyster Toadfish) was chosen for the cover of the issue!</em>
+<br><em>Katerina Zapfe's drawing of an <i>Opsanus Tau </i>(Oyster Toadfish) was chosen for the cover of the issue!</em>
 <br>
 <h3>2017</h3>
 
