--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -49,6 +49,9 @@ show_meta: false
 
 <br>Chakrabarty, P, Faircloth, B.C., Ludt, W.B, McMahan, C.D., Near, T.J, Dornburg, A., Albert, J.S., Arroyave, J., Stiassny, M.J., Sorenson, L., Alfaro, M.E. Phylogenomic Systematics of Ostariophysan fishes: Ultraconserved Elements Support the Surprising Non-monophyly of Characiformes. Systematic Biology DOI:10.1093/sysbio/syx038
 <a href="https://www.researchgate.net/publication/316442217_Phylogenomic_Systematics_of_Ostariophysan_Fishes_Ultraconserved_Elements_Support_the_Surprising_Non-Monophyly_of_Characiformes"> <en>pdf</en></a>
+<br>
+<img class="b30" src="http://carolinafishes.github.io/images/Sysbio.jpg" alt="">
+<br>
 
 <br>Dornburg, A., Townsend, J.P., Spriggs, E., Eytan, R.I., Moore, J.A., Wainwright, P.C.,Lemmon, A.R., Moriarty Lemmon, E., Near, T.J. Phylogenetic informativeness facilitates resolution of the sister lineage to percomorpha with an anchored hybrid enrichment dataset. Molecular Phylogenetics and Evolution 110: 27-38
 <a href="https://www.researchgate.net/publication/314104725_New_Insights_on_the_Sister_Lineage_of_Percomorph_Fishes_with_an_Anchored_Hybrid_Enrichment_Dataset"> <en>pdf</en></a>
