--- a/_posts/Pubs/2015-01-07-reprints.md
+++ b/_posts/Pubs/2015-01-07-reprints.md
@@ -32,7 +32,7 @@ show_meta: false
 <img class="b30" src="http://carolinafishes.github.io/images/JEBcover.jpg" alt="">
 <br><em>A photo I took of a <i>Sparisoma aurofrenatum </i>(redband parrotfish) settling in for the night made the cover of JEB!</em>
 <br>
-<br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616
+<br>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specic example using Oyster Toadfish (<i>Opsanus tau</i>). Ecology and Evolution 8 (7):3609—3616 <a href='https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.3835'><en>pdf</en></a>.
 <br>
 <img class="b30" src="http://carolinafishes.github.io/images/EEcover.jpg" alt="">
 <br><em>Katerina Zapfe's drawing of an <i>Opsanus Tau </i>(Oyster Toadfish) was chosen for the cover of the issue!</em>
